# TallyBadger

./: .dockerignore  .gitignore  ARCH.md  DISCLAIMER.md  Dockerfile  LICENSE  Makefile  README.md  STYLE.md  cursor_double_entry_accounting_applicat.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
data/: Makefile  README.md  accounts.json  cel_rule_sets.json  cheque_register_filter_presets.json  import_templates.json  journal_entry_filter_presets.json  ledger_settings.json  metadata.json  parties.json  party_match_patterns.json  seed_data.deps.mk
docs/: backup-snapshot-format.md  cel-function-reference.md  import-rules-engine.md  ledger-data-model.md  pdf-report-standards.md  scanner-uat.md
examples/: README.md  test-bank-export-2.csv  test-bank-export.csv
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: junit_to_html.py  mkmeta  seed_regen  tbload  tbsave
sql/: 001_placeholder.sql  002_ledger_mvp.sql  003_parties_and_journal_summary.sql  004_accrual_plans.sql  005_accrual_business_day_adjust.sql  006_remove_monthly_relative_accrual_plan_frequency.sql  007_settlement_workflow.sql  008_seed_default_settlement_accounts.sql  009_cel_rule_sets.sql  010_import_templates.sql  011_suspense_unallocated_and_review.sql  012_seed_unallocated_suspense_accounts.sql  013_import_template_default_account.sql  014_party_subtype_patterns_defaults.sql  015_snapshot_import_constraints_deferrable.sql  016_journal_entry_attachments.sql  017_journal_entry_review_messages.sql  018_cheques.sql  019_cheques_snapshot_fks_deferrable.sql  031_pdf_page_size.sql  (+14 more)
(+256 files in other folders)
