[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tallybadger"
version = "0.1.0"
description = "Double-entry accounting API for small rental portfolios"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic-settings>=2.6",
  "psycopg[binary,pool]>=3.2",
  "cel-python>=0.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "pytest-html>=4.1",
]

[project.scripts]
tallybadger-api = "tallybadger.main:run"
tallybadger-migrate = "tallybadger.db_migrations:main"
tbad = "tallybadger.tbad:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: marks tests that require a live PostgreSQL instance",
]
